# dns-vpn-blocker

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build-ebpf.sh  docker-compose.yml  main.py  model.onnx  pyproject.toml  train_compare.py
ha/: .env.gw1.example  .env.gw2.example  bird.conf  entrypoint.sh
src/: main.rs
vpn-blocker-ebpf/: Cargo.toml
vpn-blocker-ebpf/src/: main.rs
