[workspace]
members = [".", "vpn-blocker-ebpf"]
default-members = ["."]
resolver = "2"

[package]
name = "vpn-blocker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
pnet = { version = "0.35", features = ["std"] }
ort = { version = "1.16.3" }
ndarray = "0.15.6"
once_cell = "1.17.2"
anyhow = "1.0.98"
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
